syntax = "proto3";

package product_service;
option go_package = "genproto/product_service";
import "category.proto";

service ProductService {
    rpc Create(CreateProductRequest) returns (Response) {}
    rpc Get(IdRequest) returns (Product) {}
    rpc List(ListProductRequest) returns (ListProductResponse) {}
    rpc Update(UpdateProductRequest) returns (Response) {}
    rpc Delete(IdRequest) returns (Response) {}
}

message CreateProductRequest {
    string title = 1;
    string description = 2;
    string photo = 3;
    int32 order_number = 4;
    string product_type = 5;
    double price = 6;
    int32 category_id = 7;
}

message Product {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string photo = 4;
    int32 order_number = 5;
    bool active = 6;
    string product_type = 7;
    double price = 8;
    int32 category_id = 9;
    string created_at = 10;
    string updated_at = 11;
}

message UpdateProductRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string photo = 4;
    int32 order_number = 5;
    string product_type = 6;
    double price = 7;
    int32 category_id = 8;
}

message ListProductRequest {
    int32 limit = 1;
    int32 page = 2;
    string search = 3;
    string type = 4;
    int32 category = 5;
}

message ListProductResponse {
     repeated Product Products = 1;
     int32 count = 2;
}